--- a/starter/package.json
+++ b/starter/package.json
@@ -4,7 +4,7 @@
   "description": "Learning Node, express and mongo DB",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon server.js"
   },
   "author": "Deep kapadia",
   "license": "ISC",
