--- a/starter/package.json
+++ b/starter/package.json
@@ -4,12 +4,16 @@
   "description": "Learning Node, express and mongo DB",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Deep kapadia",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^5.13.17",
     "morgan": "^1.10.0"
   }
 }
